# ga4_product_analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: Home.py  utils.py
app/assets/: style.css
app/pages/: 01_Funnel.py  02_Checkout.py  03_Prediction.py
dbt/: dbt_project.yml
dbt/models/marts/: mart_checkout_abandonment.sql  mart_funnel.sql  mart_kpi_summary.sql  mart_purchase_prediction.sql
dbt/models/staging/: schema.yml  sources.yml  stg_events.sql
models/: baseline_model.pkl  xgb_model.pkl
notebooks/: 01_data_understanding.ipynb  02_product_analysis.ipynb  03_purchase_intent_prediction.ipynb
outputs/: feature_importance.csv  model_comparison.csv
src/: config.py  database.py  queries.py  services.py
tableau/: ga4_product_analysis.twb
tableau/ga4_product_analysis.twb Files/Data/tableau/: mart_checkout_abandonment (ga4_product_analytics).hyper  mart_funnel (ga4_product_analytics).hyper  mart_kpi_summary (ga4_product_analytics).hyper
