[project]
name = "ga4-product-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.7.0",
    "dbt-bigquery>=1.11.3",
    "dbt-core>=1.11.11",
    "google-cloud-bigquery>=3.42.1",
    "google-cloud-bigquery-storage>=2.39.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "xgboost>=3.2.0",
]
